--- a/hw4/hw4/HW4_colab.ipynb
+++ b/hw4/hw4/HW4_colab.ipynb
@@ -909,7 +909,7 @@
         "        beams = [] #First element is sequence of tokens, second is corresponding log likelihood.\n",
         "        decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
         "        topv, topi = decoder_output.data.topk(beam_size)\n",
-        "        for i in beam_size:\n",
+        "        for i in range(beam_size):\n",
         "            beams.append([[topi[0][i]], topv[0][i].item()])\n",
         "\n",
         "        # Since above has run 1 decoder, here run max_length-1 times.\n",
@@ -917,7 +917,7 @@
         "            candidates = [] # Store k*k candidate seqs.\n",
         "            for ibeam in beams:\n",
         "                decoder_input = ibeam[0][-1] # Take last word in beam seq as input\n",
-        "                # If current beam has ended, continue\n",
+        "                # If current beam has ended, add it to candidates without expanding\n",
         "                if output_vocab.itos[decoder_input] == EOS_TOKEN:\n",
         "                    candidates.append(ibeam)\n",
         "                    continue \n",
@@ -936,7 +936,7 @@
         "        for i in range(beam_size):\n",
         "            tmp_words = []\n",
         "            for j in beams[i][0]:\n",
-        "                tmp.append(output_vocab.itos[j])\n",
+        "                tmp_words.append(output_vocab.itos[j])\n",
         "            decoded_words.append(tmp_words)\n",
         "\n",
         "        return decoded_words"
@@ -952,26 +952,26 @@
         "colab": {}
       },
       "source": [
-        "# test\n",
-        "# paras\n",
-        "sentence = random.choice(data_train.examples).src\n",
-        "max_length=MAX_LEN\n",
-        "beam_size=3\n",
+        "# # test beam search1\n",
+        "# # paras\n",
+        "# sentence = random.choice(data_train.examples).src\n",
+        "# max_length=MAX_LEN\n",
+        "# beam_size=3\n",
         "\n",
-        "#code\n",
-        "input_tensor = torch.tensor([input_vocab.stoi[word] for word in sentence], device=mydevice)\n",
-        "input_length = input_tensor.size()[0]\n",
-        "encoder_hidden = encoder.initHidden()\n",
+        "# #code\n",
+        "# input_tensor = torch.tensor([input_vocab.stoi[word] for word in sentence], device=mydevice)\n",
+        "# input_length = input_tensor.size()[0]\n",
+        "# encoder_hidden = encoder.initHidden()\n",
         "\n",
-        "encoder_outputs = torch.zeros(max_length, encoder.hidden_size, device=mydevice)\n",
+        "# encoder_outputs = torch.zeros(max_length, encoder.hidden_size, device=mydevice)\n",
         "\n",
-        "for ei in range(input_length):\n",
-        "    encoder_output, encoder_hidden = encoder(input_tensor[ei], encoder_hidden)\n",
-        "    encoder_outputs[ei] += encoder_output[0, 0]\n",
+        "# for ei in range(input_length):\n",
+        "#     encoder_output, encoder_hidden = encoder(input_tensor[ei], encoder_hidden)\n",
+        "#     encoder_outputs[ei] += encoder_output[0, 0]\n",
         "\n",
-        "decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
+        "# decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
         "\n",
-        "decoder_hidden = encoder_hidden"
+        "# decoder_hidden = encoder_hidden"
       ],
       "execution_count": 0,
       "outputs": []
@@ -988,43 +988,44 @@
         "outputId": "4d66fcad-1240-4978-c355-d7de591fb7b3"
       },
       "source": [
-        "beams = [] #first element is sequence, second is corresponding log likelihood.\n",
+        "# # test beam search1\n",
+        "# beams = [] #first element is sequence, second is corresponding log likelihood.\n",
         "\n",
-        "decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
-        "decoder_hidden = encoder_hidden\n",
-        "decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
-        "topv, topi = decoder_output.data.topk(beam_size)\n",
+        "# decoder_input = torch.tensor([[output_vocab.stoi[SOS_TOKEN]]], device=mydevice)\n",
+        "# decoder_hidden = encoder_hidden\n",
+        "# decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "# topv, topi = decoder_output.data.topk(beam_size)\n",
         "\n",
-        "for i in range(beam_size):\n",
-        "    beams.append([[topi[0][i]], topv[0][i].item()])\n",
-        "print(beams)\n",
-        "for di in range(max_length-1):\n",
-        "    candidates = []\n",
-        "    for ibeam in beams:\n",
-        "        decoder_input = ibeam[0][-1]\n",
-        "        if output_vocab.itos[decoder_input] == EOS_TOKEN:\n",
-        "            candidates.append(ibeam)\n",
-        "            continue\n",
-        "        decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
-        "        topv, topi = decoder_output.data.topk(beam_size)\n",
-        "        for i in range(beam_size):\n",
-        "            candidates.append([ibeam[0]+[topi[0][i]], ibeam[1]+topv[0][i].item()])\n",
-        "    if candidates:\n",
-        "        beams = sorted(candidates, key=lambda x:x[1]/len(x[0]), reverse=True)[:beam_size]\n",
-        "    #print(beams)\n",
-        "test = []\n",
-        "for i in beams[0][0]:\n",
-        "    test.append(output_vocab.itos[i])\n",
-        "print(np.shape(test),test)\n",
-        "test = []\n",
-        "for i in beams[1][0]:\n",
-        "    test.append(output_vocab.itos[i])\n",
-        "print(np.shape(test),test)\n",
-        "test = []\n",
-        "for i in beams[2][0]:\n",
-        "    test.append(output_vocab.itos[i])\n",
-        "print(np.shape(test),test)\n",
-        "    # decoder_input = topi.squeeze().detach()"
+        "# for i in range(beam_size):\n",
+        "#     beams.append([[topi[0][i]], topv[0][i].item()])\n",
+        "# print(beams)\n",
+        "# for di in range(max_length-1):\n",
+        "#     candidates = []\n",
+        "#     for ibeam in beams:\n",
+        "#         decoder_input = ibeam[0][-1]\n",
+        "#         if output_vocab.itos[decoder_input] == EOS_TOKEN:\n",
+        "#             candidates.append(ibeam)\n",
+        "#             continue\n",
+        "#         decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
+        "#         topv, topi = decoder_output.data.topk(beam_size)\n",
+        "#         for i in range(beam_size):\n",
+        "#             candidates.append([ibeam[0]+[topi[0][i]], ibeam[1]+topv[0][i].item()])\n",
+        "#     if candidates:\n",
+        "#         beams = sorted(candidates, key=lambda x:x[1]/len(x[0]), reverse=True)[:beam_size]\n",
+        "#     #print(beams)\n",
+        "# test = []\n",
+        "# for i in beams[0][0]:\n",
+        "#     test.append(output_vocab.itos[i])\n",
+        "# print(np.shape(test),test)\n",
+        "# test = []\n",
+        "# for i in beams[1][0]:\n",
+        "#     test.append(output_vocab.itos[i])\n",
+        "# print(np.shape(test),test)\n",
+        "# test = []\n",
+        "# for i in beams[2][0]:\n",
+        "#     test.append(output_vocab.itos[i])\n",
+        "# print(np.shape(test),test)\n",
+        "#     # decoder_input = topi.squeeze().detach()"
       ],
       "execution_count": 109,
       "outputs": [
@@ -1039,130 +1040,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6fSrQFK0D-m_",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "246e73bc-3902-4667-cb5f-e9aa522c4c42"
-      },
-      "source": [
-        "for i in candidates:\n",
-        "    print(len(i[0]),i[1]/len(i[0]))"
-      ],
-      "execution_count": 107,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "15 -0.8747999827067058\n",
-            "15 -0.8791011810302735\n",
-            "15 -0.9036996205647786\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IRduecqde7xQ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "4b1cafb6-f5af-4865-9966-33dd0994f0f1"
-      },
-      "source": [
-        "beams = []\n",
-        "for i in range(beam_size):\n",
-        "    beams.append([topi[0][i].item(), topv[0][i].item()])\n",
-        "print(beams)"
-      ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[135, -0.7716608047485352], [6, -1.8260297775268555], [65, -2.626941680908203]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bX6YnWNdeTqh",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "758750d1-6b95-4dbb-f3b8-45fb04968ecd"
-      },
-      "source": [
-        "beams = sorted(beams, key=lambda x:x[0])[:2]\n",
-        "beams"
-      ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[6, -1.8260297775268555], [65, -2.626941680908203]]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 39
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "k08QgWsg19Vc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "for i in beam_size:\n",
-        "    beams.append()\n",
-        "\n",
-        "for di in range(max_length):\n",
-        "    decoder_output, decoder_hidden = decoder(decoder_input, decoder_hidden)\n",
-        "    topv, topi = decoder_output.data.topk(beam_size)\n",
-        "    next_word = output_vocab.itos[topi.item()]\n",
-        "    decoded_words.append(next_word)\n",
-        "    if next_word == EOS_TOKEN:\n",
-        "        break\n",
-        "\n",
-        "    decoder_input = topi.squeeze().detach()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vW-JpUn019Pg",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1256,14 +1133,32 @@
       "metadata": {
         "id": "Ynk529psd0C7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "outputId": "813692dd-6074-4c40-a0f7-29720cc6d7af"
       },
       "source": [
         "# test with bleu library\n",
-        "# !pip install sacrebleu"
+        "#!pip install sacrebleu"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting sacrebleu\n",
+            "  Downloading https://files.pythonhosted.org/packages/45/31/1a135b964c169984b27fb2f7a50280fa7f8e6d9d404d8a9e596180487fd1/sacrebleu-1.4.3-py3-none-any.whl\n",
+            "Requirement already satisfied: typing in /usr/local/lib/python3.6/dist-packages (from sacrebleu) (3.6.6)\n",
+            "Collecting portalocker\n",
+            "  Downloading https://files.pythonhosted.org/packages/91/db/7bc703c0760df726839e0699b7f78a4d8217fdc9c7fcb1b51b39c5a22a4e/portalocker-1.5.2-py2.py3-none-any.whl\n",
+            "Installing collected packages: portalocker, sacrebleu\n",
+            "Successfully installed portalocker-1.5.2 sacrebleu-1.4.3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1328,6 +1223,189 @@
       "cell_type": "code",
       "metadata": {
         "id": "nbipSc-B46Fl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "e90f8f49-b805-44ad-f396-a5213cd2df89"
+      },
+      "source": [
+        "import sacrebleu\n",
+        "#for i in range(5):\n",
+        "item = random.choice(data_dev.examples)\n",
+        "seq = item.src\n",
+        "print(seq)\n",
+        "words = evaluate(encoder, decoder, seq)\n",
+        "print(' '.join(words))\n",
+        "#print(item.tgt)\n",
+        "print(' '.join(item.tgt))\n",
+        "print(sacrebleu.raw_corpus_bleu(' '.join(words), ' '.join(item.tgt)))\n"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['name[The Cricketers]', 'eatType[coffee shop]', 'food[English]', 'customer rating[5 out of 5]', 'familyFriendly[yes]', 'near[The Portland Arms]']\n",
+            "<sos> The Cricketers is a coffee shop that is near The Portland Arms Arms. It is is Portland Arms. It is rated 5 out of 5 and is family friendly. <eos>\n",
+            "<sos> The Cricketers is a coffee shop that provides English food and is family friendly and near The Portland Arms with a customer Rating 5 out of 5. <eos>\n",
+            "BLEU = 38.13 61.3/46.7/34.5/21.4 (BP = 1.000 ratio = 1.069 hyp_len = 31 ref_len = 29)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JmUg6zrqF8ig",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "outputId": "68cacb54-7e31-4a04-d5ce-890f0e5d457b"
+      },
+      "source": [
+        "words_2 = evaluate_beam_search(encoder, decoder,seq)\n",
+        "for i in words_2:\n",
+        "    print(' '.join(i))\n",
+        "    print(sacrebleu.raw_corpus_bleu(' '.join(i), ' '.join(item.tgt)))"
+      ],
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<sos> The Portland Arms coffee shop rated 5 star rating. <eos>\n",
+            "BLEU = 0.00 72.7/40.0/11.1/0.0 (BP = 0.195 ratio = 0.379 hyp_len = 11 ref_len = 29)\n",
+            "<sos> The Portland Arms coffee shop rated 5 stars <eos>\n",
+            "BLEU = 0.00 80.0/44.4/12.5/0.0 (BP = 0.150 ratio = 0.345 hyp_len = 10 ref_len = 29)\n",
+            "<sos> The Portland Arms coffee shop rated 5 out of five star and is family friendly. <eos>\n",
+            "BLEU = 0.00 76.5/50.0/20.0/0.0 (BP = 0.494 ratio = 0.586 hyp_len = 17 ref_len = 29)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rvM2WvhZGgtN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "outputId": "89835fd9-1392-4797-c712-78864c20273c"
+      },
+      "source": [
+        "words_2"
+      ],
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-121-d51ed8bb2458>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords_2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'words_2' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r1SP3B5SGnGW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 952
+        },
+        "outputId": "b7cdddc4-0bf8-4122-9569-c8e03a0d2a11"
+      },
+      "source": [
+        "evaluate_beam_search(encoder, decoder,seq)"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['<sos>',\n",
+              "  'The',\n",
+              "  'Cambridge',\n",
+              "  'is',\n",
+              "  'a',\n",
+              "  'family',\n",
+              "  'friendly',\n",
+              "  'with',\n",
+              "  'a',\n",
+              "  'customer',\n",
+              "  'rating',\n",
+              "  'in',\n",
+              "  'the',\n",
+              "  'price',\n",
+              "  'range',\n",
+              "  'and',\n",
+              "  'the',\n",
+              "  '<eos>'],\n",
+              " ['<sos>',\n",
+              "  'The',\n",
+              "  'Cambridge',\n",
+              "  'is',\n",
+              "  'a',\n",
+              "  'family',\n",
+              "  'friendly',\n",
+              "  'with',\n",
+              "  'a',\n",
+              "  'customer',\n",
+              "  'rating',\n",
+              "  'in',\n",
+              "  'the',\n",
+              "  'price',\n",
+              "  'range',\n",
+              "  'and',\n",
+              "  'is',\n",
+              "  '<eos>'],\n",
+              " ['<sos>',\n",
+              "  'The',\n",
+              "  'Cambridge',\n",
+              "  'is',\n",
+              "  'a',\n",
+              "  'family',\n",
+              "  'friendly',\n",
+              "  'with',\n",
+              "  'a',\n",
+              "  'customer',\n",
+              "  'rating',\n",
+              "  'in',\n",
+              "  'the',\n",
+              "  'price',\n",
+              "  'range',\n",
+              "  'and',\n",
+              "  'the',\n",
+              "  'Café',\n",
+              "  '<eos>']]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0vCe0DqeGqZM",
         "colab_type": "code",
         "colab": {}
       },
