--- a/hw4/hw4/HW4_colab.ipynb
+++ b/hw4/hw4/HW4_colab.ipynb
@@ -331,11 +331,13 @@
         "\n",
         "data_train = torchtext.data.TabularDataset(\n",
         "        path=train_path, format='csv',\n",
+        "        skip_header=True,\n",
         "        fields=[('src', src), ('tgt', tgt)],\n",
         "        filter_pred=len_filter\n",
         "    )\n",
         "data_dev = torchtext.data.TabularDataset(\n",
         "        path=dev_path, format='csv',\n",
+        "        skip_header=True,\n",
         "        fields=[('src', src), ('tgt', tgt)],\n",
         "        filter_pred=len_filter\n",
         "    )"
@@ -1117,13 +1119,106 @@
       "metadata": {
         "id": "EzRuVq_Kc8EV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a192fe88-a67c-43f9-a266-54812f5b5a8c"
       },
       "source": [
         "# WRITE YOUR CODE FOR THE BLEU EVALUATION HERE\n",
-        "\n",
+        "# Get the src-tgt dictionary  in dev data.\n",
+        "dev_dict = {}\n",
+        "for i in data_dev.examples:\n",
+        "    if tuple(i.src) not in dev_dict:\n",
+        "        dev_dict[tuple(i.src)] = [i.tgt]\n",
+        "    else:\n",
+        "        dev_dict[tuple(i.src)] = dev_dict[tuple(i.src)]+[i.tgt]\n",
+        "print(len(dev_dict))"
+      ],
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "547"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 154
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0daxRRO_NcD2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "069dd72e-cf24-4b10-8821-514c4de28fe2"
+      },
+      "source": [
+        "# # test the src-tgt dictionary \n",
+        "# i = 0\n",
+        "# for key, value in dev_dict.items():\n",
+        "#     if i>1: break\n",
+        "#     print(key, len(value))\n",
+        "#     i += 1"
+      ],
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "('name[Alimentum]', 'area[city centre]', 'familyFriendly[no]') 6\n",
+            "('name[Alimentum]', 'area[city centre]', 'familyFriendly[no]', 'near[Burger King]') 6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mQeol1WCRy-x",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# The output of this cell should be the average BLEU score on the dev set\n",
-        "# for greedy decoding AND for beam search decoding (beam size = 3)"
+        "# for greedy decoding AND for beam search decoding (beam size = 3)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TXHFnDRRRy7i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ahVGJWaWRy12",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -1286,119 +1381,6 @@
             "BLEU = 0.00 76.5/50.0/20.0/0.0 (BP = 0.494 ratio = 0.586 hyp_len = 17 ref_len = 29)\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rvM2WvhZGgtN",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "outputId": "89835fd9-1392-4797-c712-78864c20273c"
-      },
-      "source": [
-        "words_2"
-      ],
-      "execution_count": 121,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-121-d51ed8bb2458>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords_2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'words_2' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "r1SP3B5SGnGW",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 952
-        },
-        "outputId": "b7cdddc4-0bf8-4122-9569-c8e03a0d2a11"
-      },
-      "source": [
-        "evaluate_beam_search(encoder, decoder,seq)"
-      ],
-      "execution_count": 126,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[['<sos>',\n",
-              "  'The',\n",
-              "  'Cambridge',\n",
-              "  'is',\n",
-              "  'a',\n",
-              "  'family',\n",
-              "  'friendly',\n",
-              "  'with',\n",
-              "  'a',\n",
-              "  'customer',\n",
-              "  'rating',\n",
-              "  'in',\n",
-              "  'the',\n",
-              "  'price',\n",
-              "  'range',\n",
-              "  'and',\n",
-              "  'the',\n",
-              "  '<eos>'],\n",
-              " ['<sos>',\n",
-              "  'The',\n",
-              "  'Cambridge',\n",
-              "  'is',\n",
-              "  'a',\n",
-              "  'family',\n",
-              "  'friendly',\n",
-              "  'with',\n",
-              "  'a',\n",
-              "  'customer',\n",
-              "  'rating',\n",
-              "  'in',\n",
-              "  'the',\n",
-              "  'price',\n",
-              "  'range',\n",
-              "  'and',\n",
-              "  'is',\n",
-              "  '<eos>'],\n",
-              " ['<sos>',\n",
-              "  'The',\n",
-              "  'Cambridge',\n",
-              "  'is',\n",
-              "  'a',\n",
-              "  'family',\n",
-              "  'friendly',\n",
-              "  'with',\n",
-              "  'a',\n",
-              "  'customer',\n",
-              "  'rating',\n",
-              "  'in',\n",
-              "  'the',\n",
-              "  'price',\n",
-              "  'range',\n",
-              "  'and',\n",
-              "  'the',\n",
-              "  'Café',\n",
-              "  '<eos>']]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 126
         }
       ]
     },
