--- a/hw4/hw4/BLEU.ipynb
+++ b/hw4/hw4/BLEU.ipynb
@@ -34,18 +34,67 @@
         "colab": {}
       },
       "source": [
-        "words = ['<sos>', 'The', 'Eagle', 'only', 'scores', '3', 'out', 'of', '5', 'for', 'the', 'fast', 'food.', '<eos>']\n",
+        "# candidate\n",
+        "words = ['<sos>', 'The', 'Olive', 'Grove', 'is', 'a', 'pub', 'providing', 'Indian', 'food', 'in', 'the', 'high', 'price', 'range.', 'It', 'is', 'located', 'in', 'the', 'city', 'centre.', '<eos>']\n",
+        "# reference\n",
+        "reference = [['<sos>', 'There', 'is', 'a', 'place', 'in', 'the', 'city', 'centre,', 'Alimentum,', 'that', 'is', 'not', 'family-friendly.', '<eos>'],\n",
+        "['<sos>', 'In', 'the', 'city', 'centre', 'there', 'is', 'a', 'venue', 'name', 'Alimentum,', 'this', 'is', 'not', 'a', 'family-friendly', 'venue.', '<eos>'],\n",
+        "['<sos>', 'Alimentum', 'is', 'not', 'a', 'family-friendly', 'place,', 'located', 'in', 'city', 'centre.', '<eos>'],\n",
+        "['<sos>', 'Alimentum', 'is', 'not', 'a', 'family-friendly', 'arena', 'and', 'is', 'located', 'in', 'the', 'city', 'centre.', '<eos>'],\n",
+        "['<sos>', 'Alimentum', 'is', 'not', 'a', 'family-friendly', 'place', 'in', 'the', 'city', 'centre.', '<eos>'],\n",
+        "['<sos>', 'Alimentum', 'in', 'city', 'centre', 'is', 'not', 'a', 'family-friendly', 'place.', '<eos>']]\n",
+        "\n",
         "SOS_TOKEN = '<sos>'\n",
-        "EOS_TOKEN = '<eos>'\n",
-        "\n",
-        "if EOS_TOKEN in words:\n",
-        "    words.remove(EOS_TOKEN)\n",
-        "if SOS_TOKEN in words:\n",
-        "    words.remove(SOS_TOKEN)\n",
-        "\n",
-        "# preprocessing of the words\n",
+        "EOS_TOKEN = '<eos>'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sSJMCf4GArLJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "a54b532d-c968-4bf8-e214-f351ea848355"
+      },
+      "source": [
         "import string\n",
-        "words = [i.translate(str.maketrans('','',string.punctuation)).lower() for i in words]"
+        "def preprocessing(seq):\n",
+        "    if EOS_TOKEN in seq:\n",
+        "        seq.remove(EOS_TOKEN)\n",
+        "    if SOS_TOKEN in seq:\n",
+        "        seq.remove(SOS_TOKEN)\n",
+        "    seq = [i.translate(str.maketrans('','',string.punctuation)).lower() for i in seq]\n",
+        "    return seq\n",
+        "words = preprocessing(words)\n",
+        "print(words)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['the', 'olive', 'grove', 'is', 'a', 'pub', 'providing', 'indian', 'food', 'in', 'the', 'high', 'price', 'range', 'it', 'is', 'located', 'in', 'the', 'city', 'centre']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_X2A1XaoBFGo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def pn(src, tgt_list, n):\n",
+        "    ngram = ngrams(src, n)\n",
+        "    "
       ],
       "execution_count": 0,
       "outputs": []
@@ -55,34 +104,23 @@
       "metadata": {
         "id": "t7V-7C5dftwp",
         "colab_type": "code",
+        "outputId": "e22c0506-f597-445a-80dd-baf072e742b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
-        },
-        "outputId": "61db7d38-49db-46a6-dfd5-1541a40acbc1"
+          "height": 34
+        }
       },
       "source": [
-        "tmp = ngrams(words,1)\n",
-        "for i in tmp:\n",
-        "    print(i)"
+        "ngram = [i for i in ngrams(words,1)]\n",
+        "unique_ngram = list(set(ngram))\n",
+        "print(len(ngram), len(unique_ngram))"
       ],
-      "execution_count": 27,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "('the',)\n",
-            "('eagle',)\n",
-            "('only',)\n",
-            "('scores',)\n",
-            "('3',)\n",
-            "('out',)\n",
-            "('of',)\n",
-            "('5',)\n",
-            "('for',)\n",
-            "('the',)\n",
-            "('fast',)\n",
-            "('food',)\n"
+            "21 17\n"
           ],
           "name": "stdout"
         }
@@ -91,35 +129,73 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nwdYPRROf441",
+        "id": "KlAXs_yzF_sq",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 34
         },
-        "outputId": "9b18ed66-3aba-4608-e65c-14d063591b1d"
+        "outputId": "f3d19c2a-109c-4d72-9e49-f9ac4469b4d6"
       },
       "source": [
-        "tmp = ngrams(words,2)\n",
-        "for i in tmp:\n",
-        "    print(i)"
+        "for i in reference:\n",
+        "    ref_ngram = ngrams(preprocessing(reference[0]),1)\n",
+        "\n"
       ],
-      "execution_count": 9,
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "13"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nwdYPRROf441",
+        "colab_type": "code",
+        "outputId": "76597eb5-ddeb-44a0-c32b-1b3dae04d19b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 306
+        }
+      },
+      "source": [
+        "for j in unique_ngram:\n",
+        "    print(j)\n",
+        "    #print(sum(1 for tmp in ngrams(preprocessing(reference[i]),1) if tmp==j))"
+      ],
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "('The', 'Eagle')\n",
-            "('Eagle', 'only')\n",
-            "('only', 'scores')\n",
-            "('scores', '3')\n",
-            "('3', 'out')\n",
-            "('out', 'of')\n",
-            "('of', '5')\n",
-            "('5', 'for')\n",
-            "('for', 'their')\n",
-            "('their', 'fast')\n",
-            "('fast', 'food.')\n"
+            "('familyfriendly',)\n",
+            "('indian',)\n",
+            "('high',)\n",
+            "('located',)\n",
+            "('a',)\n",
+            "('price',)\n",
+            "('centre',)\n",
+            "('providing',)\n",
+            "('in',)\n",
+            "('it',)\n",
+            "('the',)\n",
+            "('pub',)\n",
+            "('food',)\n",
+            "('grove',)\n",
+            "('range',)\n",
+            "('city',)\n",
+            "('is',)\n"
           ],
           "name": "stdout"
         }
@@ -130,40 +206,24 @@
       "metadata": {
         "id": "gDWzwLPdgGVm",
         "colab_type": "code",
+        "outputId": "f83b801f-05f4-4bfa-cb4e-aa9e49f08c3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
-        },
-        "outputId": "490e8c59-d9c1-438f-dfa1-a28d3bdb4ce1"
+          "height": 130
+        }
       },
       "source": [
-        "import string\n",
-        "[i.translate(str.maketrans('','',string.punctuation)).lower() for i in words]"
+        "sum(1  if tmp==unique_ngram[0])"
       ],
-      "execution_count": 22,
+      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['the',\n",
-              " 'eagle',\n",
-              " 'only',\n",
-              " 'scores',\n",
-              " '3',\n",
-              " 'out',\n",
-              " 'of',\n",
-              " '5',\n",
-              " 'for',\n",
-              " 'their',\n",
-              " 'fast',\n",
-              " 'food']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-a86e5c62d0af>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    sum(1 for tmp in ngrams(preprocessing(reference[i]),1)) if tmp==unique_ngram[0])\u001b[0m\n\u001b[0m                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
         }
       ]
     },
@@ -172,16 +232,17 @@
       "metadata": {
         "id": "kiheWjd-g3ZJ",
         "colab_type": "code",
+        "outputId": "07ecef6d-f401-4d7d-ccc2-207dd9bbdbd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 164
-        },
-        "outputId": "b9c92f28-be31-4b1c-a255-9ec499cb21fc"
+          "height": 181
+        }
       },
       "source": [
-        "'food.'.translate(str.maketrans((\"\",\"\"), string.punctuation))\n"
+        "for tmp in ngrams(preprocessing(reference[i]),1):\n",
+        "    print(tmp)"
       ],
-      "execution_count": 15,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "error",
@@ -190,8 +251,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-26f7cc0eb051>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m'food.'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranslate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaketrans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpunctuation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: first maketrans argument must be a string if there is a second argument"
+            "\u001b[0;32m<ipython-input-32-5f618577c604>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mtmp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mngrams\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreference\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
           ]
         }
       ]
@@ -201,28 +262,36 @@
       "metadata": {
         "id": "9mpRnyR6n0jZ",
         "colab_type": "code",
+        "outputId": "8d7de778-ea95-45d5-8971-e408115f6865",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c04878e4-520f-4cb7-b9e1-29d6edec9e42"
+          "height": 238
+        }
       },
       "source": [
-        "'food.'.translate(('', string.punctuation))"
+        "for i in ngrams(preprocessing(reference[0]),1):\n",
+        "    print(i)"
       ],
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'food.'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
+          "output_type": "stream",
+          "text": [
+            "('there',)\n",
+            "('is',)\n",
+            "('a',)\n",
+            "('place',)\n",
+            "('in',)\n",
+            "('the',)\n",
+            "('city',)\n",
+            "('centre',)\n",
+            "('alimentum',)\n",
+            "('that',)\n",
+            "('is',)\n",
+            "('not',)\n",
+            "('familyfriendly',)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -231,29 +300,28 @@
       "metadata": {
         "id": "L7axBhHFqsZa",
         "colab_type": "code",
+        "outputId": "4a5c35b4-6356-4e79-cfa0-606aefd573f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2379853c-27f0-4254-9e4d-24cfcf20d6b2"
+        }
       },
       "source": [
-        "table = str.maketrans(\"\",\"\")\n",
-        "'food.'.translate(str.maketrans('','',string.punctuation))"
+        "unique_ngram[0] in ngrams(preprocessing(reference[0]),1)"
       ],
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'food'"
+              "True"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 22
         }
       ]
     },
